[package]
name = "claude-lifeline"
version = "0.0.2"
edition = "2021"
description = "Claude Code status line — model, git, context, usage with pace markers"

[[bin]]
name = "claude-lifeline"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
